more legacy CRCs